--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@ body, html {
 .body {
     /* The image used */
     background-image: url("./untad.jpg");
+    
   
     /* Full height */
-    height: 100%; 
   
     /* Center and scale the image nicely */
     background-position: center;
-    background-repeat: no-repeat;
+    background-repeat: repeat-y;
     background-size: cover;
   }
