--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
   }
 .body {
+
     /* The image used */
     background-image: url("./untad.jpg");
     
@@ -13,4 +14,15 @@ body, html {
     background-position: center;
     background-repeat: repeat-y;
     background-size: cover;
+
+  }
+
+  .body2 {
+
+   
+    background-image: url("./untad.jpg");
+    
+  
+    background-size: cover;
+    height: 100%;
   }
